# Sentinel

./: .cursorrules  .dockerignore  .gitignore  Draft Plan.md  Final Plan.md  README.md  Weekly Structure.md  docker-compose.yml  pyproject.toml
data/: README.md
data/examples/: gray_area_seed.jsonl  llm_gap_fill.jsonl  model_failure_v2.jsonl  starter_seed.jsonl
docker/: api.Dockerfile  executor.Dockerfile
docs/: Final Plan.md  Weekly Structure.md  data_strategy.md  week1_threat_model.md
policies/: default.json
scripts/: README.md  calibrate_thresholds.py  data_pipeline.py  docker_smoke_check.py  evaluate_rules.py  export_onnx.py  measure_onnx_latency.py  train_guardrail.py
src/sentinel/: __init__.py
src/sentinel/api/: __init__.py  main.py  schemas.py
src/sentinel/decision/: __init__.py  confirmation.py  engine.py  policy.py  rules.py
src/sentinel/execution/: __init__.py  docker_executor.py  result.py
src/sentinel/ml/: __init__.py  inference.py
tests/: test_api_schemas.py  test_api_service.py  test_calibrate_thresholds.py  test_confirmation.py  test_data_pipeline.py  test_decision_engine.py  test_evaluate_rules.py  test_executor.py  test_export_onnx.py  test_measure_onnx_latency.py  test_onnx_inference.py  test_policy.py  test_rules.py  test_train_guardrail.py
