[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-guardrail"
version = "0.1.0"
description = "Local guardrail API for AI-agent command evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "onnxruntime",
    "transformers",
]

[project.optional-dependencies]
test = [
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

